Fixed schedule view table display issues, made nav bar collapsable

--- a/FixedIt/war/_view/stylesheets/styles.css
+++ b/FixedIt/war/_view/stylesheets/styles.css
@@ -26,7 +26,7 @@
 	border-radius: 0.3rem;
 	top: 10px;
 	right: 0px;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.9);
 }
 
 .sideBarTable {
