--- a/FixedIt/war/_view/stylesheets/stylesheet.css
+++ b/FixedIt/war/_view/stylesheets/stylesheet.css
@@ -38,7 +38,7 @@ a {
   display: inline-block;
   width: 180px;
   height: 40px;
-  margin-bottom: 1rem;
+  margin-bottom: 0px;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
@@ -80,12 +80,17 @@ a {
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
   
+.course-table {
+	width:100%;
+}
+  
 .styled-body {
+  margin:0px;
+  height: 200vh;
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957);
-  height: 100vh; }
+  background-image: linear-gradient(120deg, #155799, #159957); }
 
 @media screen and (min-width: 64em) {
   .page-header {
